For 1.20.8
	
	- Occlusionculling - when failed, textures not displayed, due to an optimization
	  for the texture loading scheduling algorithm.

	- start of ComposedShader and ShaderPart support.

	- Background - textures now working again, problem related to new scenegraph
	  structure resolved.

	- Background - provided more of a separation bewteen ground and sky backgrounds,
	  as it was possible, depending on z buffer depth, to have z-fighting going on.

	- TextureBackground was not accepting set_bind events; fixed.

	- Event routing for "enabled" on all nodes with this field, now working.

	- verify that events get sent for all Geospatial node fields that are not
	  inputOnly fields.

	- GeoTouchSensor code added.

	- GeoTransform code added.

	- Some routes on parsing initialization were not getting set.

	- Javascript - added SFVec3d support.

	- XML parser - sanity check routing to ensure we route only to proper
	  locations; eg, do not allow routing to an initializeOnly field.

	- Occlusionculling - better performance when testing heavily textured objects
	  for draw status.

For 1.20.7
	- Examine mode - Viewpoint - does distance between 2 points in 3d to determine
	  rotation distance, as per the spec.
	
	- Occlusionculling had difficulties with DEF/USE nodes; fixed.

	- Moving BoundingBox calculations from scenegraph rendering step to node
	  updating step.

	- Polyrep.c; normal finding, might go off end of coordindex array. Fixed.
	  affects Extrusions, IndexedFaceSets, ElevationGrids, etc.

	- X3D Switch statement was not parsing correctly.

For 1.20.6
	- Binding of nodes on parse now done in display thread, instead of parsing
	  thread, to get around infrequent bug that would give erratic results.

	- Binding Viewpoints; edge case; if you have only one Viewpoint, and it exists
	  in an Inline, it can now be bound to when changing viewpoint. (spec says
	  automatic binding on load does not happen with inlined nodes)
